// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ui/Checkbox > should do a snapshot test of the checked Checkbox DOM 1`] = `
<DocumentFragment>
  <label
    class="sendbird-checkbox "
  >
    <input
      checked=""
      type="checkbox"
    />
    <span
      class="sendbird-checkbox--checkmark "
    />
  </label>
</DocumentFragment>
`;

exports[`ui/Checkbox > should do a snapshot test of the default Checkbox DOM 1`] = `
<DocumentFragment>
  <label
    class="sendbird-checkbox "
  >
    <input
      type="checkbox"
    />
    <span
      class="sendbird-checkbox--checkmark "
    />
  </label>
</DocumentFragment>
`;
